whatchlist and account-menu changes, portfolio && archive tabs created

--- a/crypfolio/web/WEB-INF/web.xml
+++ b/crypfolio/web/WEB-INF/web.xml
@@ -72,4 +72,10 @@
 
     </session-config>
 
+
+    <mime-mapping>
+        <extension>ico</extension>
+        <mime-type>image/x-icon</mime-type>
+    </mime-mapping>
+
 </web-app>
