--- a/crypfolio/pom.xml
+++ b/crypfolio/pom.xml
@@ -119,6 +119,12 @@
             <version>2.8.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.8.2</version>
+        </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
         <dependency>
