--- a/crypfolio/pom.xml
+++ b/crypfolio/pom.xml
@@ -105,6 +105,12 @@
             <version>2.8.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.8.2</version>
+        </dependency>
+
         <!--   @@@   OTHERS   @@@   -->
         <dependency>
             <groupId>commons-codec</groupId>
