--- a/crypfolio-jsf-mongodb/pom.xml
+++ b/crypfolio-jsf-mongodb/pom.xml
@@ -5,8 +5,8 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>tk.crypfolio</groupId>
-    <artifactId>tk.crypfolio</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>crypfolio-jsf-mongodb</artifactId>
+    <version>0.1.0</version>
 
     <build>
 
@@ -73,7 +73,7 @@
 
         <dependency>
             <groupId>org.mongodb</groupId>
-            <artifactId>mongodb-driver</artifactId>
+            <artifactId>mongo-java-driver</artifactId>
             <version>3.9.1</version>
         </dependency>
 
