--- a/crypfolio-jsf-mariadb/pom.xml
+++ b/crypfolio-jsf-mariadb/pom.xml
@@ -5,8 +5,8 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>tk.crypfolio</groupId>
-    <artifactId>tk.crypfolio</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>crypfolio-jsf-mariadb</artifactId>
+    <version>0.1.0</version>
 
     <build>
 
