--- a/crypfolio-vuejs-mongodb/frontend/package.json
+++ b/crypfolio-vuejs-mongodb/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "date-fns": "^1.30.1",
     "vue": "^2.6.7",
     "vue-router": "^3.0.1",
     "vuetify": "^1.5.2",
