--- a/crypfolio-vuejs-mongodb/backend/pom.xml
+++ b/crypfolio-vuejs-mongodb/backend/pom.xml
@@ -180,6 +180,14 @@
             <version>1.1.1</version>
         </dependency>
 
+        <!-- Gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+
+
         <!--   @@@   LOGG4J   @@@   -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
