vuejs-mongodb: image coin-default.png moved to public directory, because JS didn't see (copy) it from "return ..." statement

--- a/crypfolio-vuejs-mongodb/backend/pom.xml
+++ b/crypfolio-vuejs-mongodb/backend/pom.xml
@@ -59,6 +59,7 @@
                                 <resource>
                                     <directory>${project.parent.basedir}/frontend/target/dist</directory>
                                     <includes>
+                                        <include>img/</include>
                                         <include>static/</include>
                                         <include>index.html</include>
                                     </includes>
