--- a/crypfolio-vuejs-mongodb/frontend/package.json
+++ b/crypfolio-vuejs-mongodb/frontend/package.json
@@ -13,6 +13,7 @@
     "sass": "^1.23.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.6.10",
+    "vue-clipboard2": "^0.3.1",
     "vue-router": "^3.1.3",
     "vuetify": "^1.5.2",
     "vuex": "^3.1.1"
